--- a/app/src/main/res/layout/fragment_food_overview.xml
+++ b/app/src/main/res/layout/fragment_food_overview.xml
@@ -2,18 +2,203 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginBottom="235dp"
-        android:text="Overview Fragment"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:stretchColumns="1">
 
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="General"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Food name"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="Apple"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Brand name"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="Pink Lady"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Type"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="Fruit"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="kCal (100)"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="13"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Measurements"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Measurments done"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="1"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Max. Glucose"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="145"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Average Glucose"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="104"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Analyses"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Rating"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="good"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+        </TableRow>
+
+
+        <TableRow>
+
+            <TextView
+                android:layout_column="1"
+                android:padding="3dip"
+                android:text="Personal GI"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+
+            <TextView
+                android:gravity="right"
+                android:padding="3dip"
+                android:text="not calculated yet"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                />
+        </TableRow>
+
+        <View
+            android:layout_height="2dip"
+            android:background="#FF909090" />
+    </TableLayout>
 </LinearLayout>
